examples/kitchen-sink/src/pages/errors/ssr/index.page.tsx
export default function ErrorsPage() {
  return <div></div>;
}
